pagination and form fuctions

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         />
 
         {% comment %} CSS {% endcomment %}
-        <link rel="{% static 'css/blog.css' %}" href="style.css">
+        <link rel="stylesheet" href="{% static './css/blog.css' %}">
     </head>
 
     <body>
