--- a/templates/blog/post/list.html
+++ b/templates/blog/post/list.html
@@ -15,7 +15,7 @@
                 <div class="card-body">
                     <h4 class="card-title text-info">{{post.title}}</h4>
                     <p class="card-text">{{post.body | truncatewords:30|linebreaks}}</p>
-                    
+                    <p class="tags">Tags: {{post.tags.all|join:", "}}</p>
                 </div>
             </a>
             
